--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,20 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: 5em;
   color: white;
 }
 
+.numbers{
+  display: grid;
+  gap: 0.5rem;
+  grid-template-columns: 1fr 1fr 1fr;
 
+  
+}
+
+.operators{
+  display: grid;
+  gap: 0.5rem;
+  grid-template-columns: 1fr 1fr 1fr;
+}
