--- a/src/App.css
+++ b/src/App.css
@@ -1,34 +1,67 @@
+body {
+  --dark-color: #1a1a1a;
+  --bright-color: rgb(214, 213, 213);
+}
+
 .App {
   text-align: center;
-  background-color: #a9a9a9;
+  background: rgb(51, 51, 51);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: 5em;
-  color: white;
+  color: var(--bright-color);
 }
 
 .calculator {
-  background-color: #4f4f4f;
+  background-color: var(--dark-color);
   border-radius: 2rem;
+  border: solid 2px blueviolet;    /* border-color:  ; */
+  transition: border 1000ms ease-in-out;
   padding: 2rem;
   display: grid;
   flex-direction: column;
-  gap: 0.5rem;
+  gap: 1rem;
+  box-shadow:0px 0px 50px #181818;
+}
+
+.calculator:hover {
+  border: solid 2px yellow;
+}
+
+input {
+  font-size: 3rem;
+  size:  3rem;
+  margin-bottom: 3rem;
 }
 
 .buttons{
+  
   display: grid;
-  gap: 0.5rem;
-  font-size: 5rem;
+  gap: 1rem;
+  font-size: 3rem;
+
   /* grid-template-columns: 1fr 1fr 1fr; */
+  button {
+    text-align: center;
+    all: unset;
+    /* border: 1px solid var(--bright-color); */
+    border-radius: 5px;
+  }
+
+  button:hover {
+    color: var(--dark-color);
+    background-color: var(--bright-color);
+  }
+
+
 }
 
 .numbers{
   display: grid;
-  gap: 0.5rem;
+  gap: 1rem;
   grid-template-columns: 1fr 1fr 1fr;
 
 }
